parser.output
Terminale, die in Grammatik unbenutzt sind

    ABS
    GETPRECD


Zustand 54 Konflikte: 2 Schiebe/Reduziere
Zustand 92 Konflikte: 2 Schiebe/Reduziere
Zustand 95 Konflikte: 2 Schiebe/Reduziere
Zustand 96 Konflikte: 2 Schiebe/Reduziere
Zustand 186 Konflikte: 33 Schiebe/Reduziere
Zustand 199 Konflikte: 2 Schiebe/Reduziere
Zustand 200 Konflikte: 2 Schiebe/Reduziere
Zustand 201 Konflikte: 20 Schiebe/Reduziere
Zustand 202 Konflikte: 20 Schiebe/Reduziere
Zustand 203 Konflikte: 2 Schiebe/Reduziere
Zustand 204 Konflikte: 2 Schiebe/Reduziere
Zustand 205 Konflikte: 2 Schiebe/Reduziere
Zustand 206 Konflikte: 2 Schiebe/Reduziere
Zustand 207 Konflikte: 2 Schiebe/Reduziere
Zustand 208 Konflikte: 2 Schiebe/Reduziere
Zustand 209 Konflikte: 2 Schiebe/Reduziere
Zustand 210 Konflikte: 2 Schiebe/Reduziere
Zustand 211 Konflikte: 2 Schiebe/Reduziere
Zustand 212 Konflikte: 2 Schiebe/Reduziere
Zustand 213 Konflikte: 2 Schiebe/Reduziere
Zustand 214 Konflikte: 2 Schiebe/Reduziere
Zustand 215 Konflikte: 2 Schiebe/Reduziere
Zustand 216 Konflikte: 2 Schiebe/Reduziere


Grammatik

    0 $accept: Source $end

    1 Source: GRAPH '(' TopExpr ')' ';'
    2       | TopExpr ';'
    3       | Print ';'
    4       | Function

    5 List: '[' ']'
    6     | Listbegin ']'

    7 Listbegin: Listbegin ',' Expr
    8          | '[' Expr

    9 Dict: '{' '}'
   10     | Dictbegin '}'

   11 Dictbegin: Dictbegin ',' Expr ':' Expr
   12          | '{' Expr ':' Expr

   13 Subscript: Subscriptmiddle ']'

   14 Subscriptmiddle: Subscriptbegin
   15                | Subscriptmiddle ',' Expr
   16                | Subscriptmiddle ',' ':' Expr
   17                | Subscriptmiddle ',' Expr ':'
   18                | Subscriptmiddle ',' ':' ':'
   19                | Subscriptmiddle ',' Expr ':' Expr
   20                | Subscriptmiddle ',' ':' ':' Expr
   21                | Subscriptmiddle ',' ':' Expr ':' Expr
   22                | Subscriptmiddle ',' Expr ':' Expr ':' Expr

   23 Subscriptbegin: SubscriptExpr '[' Expr
   24               | SubscriptExpr '[' ':' Expr
   25               | SubscriptExpr '[' Expr ':'
   26               | SubscriptExpr '[' ':' ':'
   27               | SubscriptExpr '[' Expr ':' Expr
   28               | SubscriptExpr '[' ':' ':' Expr
   29               | SubscriptExpr '[' ':' Expr ':' Expr
   30               | SubscriptExpr '[' Expr ':' Expr ':' Expr

   31 SubscriptExpr: VAR
   32              | List
   33              | Subscript
   34              | Call

   35 Return: RET TopExpr

   36 For: Forend Block

   37 Forend: Forendbegin ';'
   38       | Forcond ';'

   39 Forendbegin: Forcond Assignment
   40            | Forendbegin ',' Assignment

   41 Forcond: Forinit TopExpr ';'

   42 Forinit: FOR ';'
   43        | Forinitbegin ';'

   44 Forinitbegin: FOR Assignment
   45             | Forinitbegin ',' Assignment

   46 Block: Blockbegin '}'
   47      | Blockmiddle '}'

   48 Blockmiddle: Blockbegin BlockExpr
   49            | Blockmiddle BlockExpr

   50 Blockbegin: '{'

   51 BlockExpr: TopExpr ';'
   52          | For
   53          | Return ';'
   54          | Print ';'

   55 SubscriptAssignment: Subscript '=' Expr

   56 Assignment: VAR '=' Expr
   57           | FUN '=' Expr

   58 Function: Functionproto '=' Expr ';'
   59         | Functionproto '=' If ';'
   60         | Functionproto '=' Block

   61 Functionproto: FunctionArgs ')'
   62              | FunctionName ')'

   63 FunctionArgs: FunctionName VAR
   64             | FunctionArgs ',' VAR

   65 FunctionName: VAR '('
   66             | FUN '('

   67 Call: FUN '(' ')'
   68     | Callbegin ')'

   69 Callbegin: FUN '(' Expr
   70          | Callbegin ',' Expr

   71 If: Ifbegin
   72   | Ifbegin ELSE ':' IfExpr

   73 Ifbegin: IF Expr ':' IfExpr
   74        | Ifbegin ELIF Expr ':' IfExpr

   75 IfExpr: Expr
   76       | Return
   77       | Block

   78 Op: Expr '+' Expr
   79   | Expr '-' Expr
   80   | Expr '*' Expr
   81   | Expr '/' Expr
   82   | Expr '%' Expr
   83   | Expr POW Expr
   84   | Expr '<' Expr
   85   | Expr '>' Expr
   86   | Expr EQL Expr
   87   | Expr UNEQL Expr
   88   | Expr SEQL Expr
   89   | Expr BEQL Expr
   90   | Expr '&' Expr
   91   | Expr '|' Expr
   92   | Expr LIMP Expr
   93   | Expr RIMP Expr
   94   | Expr EQV Expr
   95   | Expr '^' Expr
   96   | GCD Expr ',' Expr ')'
   97   | LCM Expr ',' Expr ')'
   98   | '-' Expr
   99   | '~' Expr
  100   | Expr '!'
  101   | '|' Expr '|'
  102   | SQRT Expr ')'
  103   | SGN Expr ')'
  104   | FIBO Expr ')'
  105   | PRIMORIAL Expr ')'
  106   | Expr '#'
  107   | RATIONAL Expr ')'
  108   | RATIONAL Expr ',' Expr ')'
  109   | INT_T Expr ')'
  110   | FLT_T Expr ')'
  111   | NUM Expr ')'
  112   | DEN Expr ')'
  113   | SETPREC Expr ')'
  114   | GETPREC ')'
  115   | SETPRECD Expr ')'
  116   | SETOUTPREC Expr ')'
  117   | SOPD Expr ')'
  118   | ISPRIME Expr ',' Expr ')'
  119   | ISPRIME Expr ')'
  120   | REF_COUNT Expr ')'
  121   | ADDRESS_OF Expr ')'
  122   | NEXTPRIME Expr ')'
  123   | IS_KEY Expr ',' Expr ')'

  124 Print: Printbegin ')'
  125      | PRINT ')'

  126 Printbegin: PRINT TopExpr
  127           | Printbegin ',' Expr
  128           | Printbegin ',' SEP '=' Expr
  129           | Printbegin ',' END '=' Expr

  130 TopExpr: Expr
  131        | Assignment
  132        | SubscriptAssignment
  133        | If

  134 Expr: '(' Op ')'
  135     | '(' If ')'
  136     | Call
  137     | List
  138     | Dict
  139     | Subscript
  140     | Op
  141     | INT
  142     | FLT
  143     | VAR
  144     | STR


Terminale und die Regeln, in denen sie verwendet werden

    $end (0) 0
    '!' (33) 100
    '#' (35) 106
    '%' (37) 82
    '&' (38) 90
    '(' (40) 1 65 66 67 69 134 135
    ')' (41) 1 61 62 67 68 96 97 102 103 104 105 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124 125 134 135
    '*' (42) 80
    '+' (43) 78
    ',' (44) 7 11 15 16 17 18 19 20 21 22 40 45 64 70 96 97 108 118 123 127 128 129
    '-' (45) 79 98
    '/' (47) 81
    ':' (58) 11 12 16 17 18 19 20 21 22 24 25 26 27 28 29 30 72 73 74
    ';' (59) 1 2 3 37 38 41 42 43 51 53 54 58 59
    '<' (60) 84
    '=' (61) 55 56 57 58 59 60 128 129
    '>' (62) 85
    '[' (91) 5 8 23 24 25 26 27 28 29 30
    ']' (93) 5 6 13
    '^' (94) 95
    '{' (123) 9 12 50
    '|' (124) 91 101
    '}' (125) 9 10 46 47
    '~' (126) 99
    error (256)
    EQL (258) 86
    UNEQL (259) 87
    BEQL (260) 89
    SEQL (261) 88
    LIMP (262) 92
    RIMP (263) 93
    EQV (264) 94
    GRAPH (265) 1
    POW (266) 83
    SQRT (267) 102
    SGN (268) 103
    GCD (269) 96
    LCM (270) 97
    FIBO (271) 104
    PRIMORIAL (272) 105
    IF (273) 73
    ELSE (274) 72
    ELIF (275) 74
    ABS (276)
    FOR (277) 42 44
    RET (278) 35
    SETPREC (279) 113
    GETPREC (280) 114
    SETPRECD (281) 115
    GETPRECD (282)
    SETOUTPREC (283) 116
    SOPD (284) 117
    RATIONAL (285) 107 108
    NUM (286) 111
    DEN (287) 112
    INT_T (288) 109
    FLT_T (289) 110
    ISPRIME (290) 118 119
    NEXTPRIME (291) 122
    PRINT (292) 125 126
    SEP (293) 128
    END (294) 129
    REF_COUNT (295) 120
    ADDRESS_OF (296) 121
    IS_KEY (297) 123
    INT <Int> (298) 141
    FLT <Flt> (299) 142
    VAR <Var> (300) 31 56 63 64 65 143
    FUN <Var> (301) 57 66 67 69
    STR <String> (302) 144
    UMINUS (303)


Nicht-Terminal und die Regeln, in denen sie verwendet werden

    $accept (72)
        auf der linken Seite: 0
    Source (73)
        auf der linken Seite: 1 2 3 4
        auf der rechten Seite: 0
    List <List> (74)
        auf der linken Seite: 5 6
        auf der rechten Seite: 32 137
    Listbegin <List> (75)
        auf der linken Seite: 7 8
        auf der rechten Seite: 6 7
    Dict <Dict> (76)
        auf der linken Seite: 9 10
        auf der rechten Seite: 138
    Dictbegin <Dict> (77)
        auf der linken Seite: 11 12
        auf der rechten Seite: 10 11
    Subscript <Subscript> (78)
        auf der linken Seite: 13
        auf der rechten Seite: 33 55 139
    Subscriptmiddle <Subscript> (79)
        auf der linken Seite: 14 15 16 17 18 19 20 21 22
        auf der rechten Seite: 13 15 16 17 18 19 20 21 22
    Subscriptbegin <Subscript> (80)
        auf der linken Seite: 23 24 25 26 27 28 29 30
        auf der rechten Seite: 14
    SubscriptExpr <Expr> (81)
        auf der linken Seite: 31 32 33 34
        auf der rechten Seite: 23 24 25 26 27 28 29 30
    Return <Return> (82)
        auf der linken Seite: 35
        auf der rechten Seite: 53 76
    For <For> (83)
        auf der linken Seite: 36
        auf der rechten Seite: 52
    Forend <For> (84)
        auf der linken Seite: 37 38
        auf der rechten Seite: 36
    Forendbegin <For> (85)
        auf der linken Seite: 39 40
        auf der rechten Seite: 37 40
    Forcond <For> (86)
        auf der linken Seite: 41
        auf der rechten Seite: 38 39
    Forinit <For> (87)
        auf der linken Seite: 42 43
        auf der rechten Seite: 41
    Forinitbegin <For> (88)
        auf der linken Seite: 44 45
        auf der rechten Seite: 43 45
    Block <Block> (89)
        auf der linken Seite: 46 47
        auf der rechten Seite: 36 60 77
    Blockmiddle <Block> (90)
        auf der linken Seite: 48 49
        auf der rechten Seite: 47 49
    Blockbegin <Block> (91)
        auf der linken Seite: 50
        auf der rechten Seite: 46 48
    BlockExpr <Expr> (92)
        auf der linken Seite: 51 52 53 54
        auf der rechten Seite: 48 49
    SubscriptAssignment <SubscriptAssignment> (93)
        auf der linken Seite: 55
        auf der rechten Seite: 132
    Assignment <Assignment> (94)
        auf der linken Seite: 56 57
        auf der rechten Seite: 39 40 44 45 131
    Function <Function> (95)
        auf der linken Seite: 58 59 60
        auf der rechten Seite: 4
    Functionproto <Function> (96)
        auf der linken Seite: 61 62
        auf der rechten Seite: 58 59 60
    FunctionArgs <Function> (97)
        auf der linken Seite: 63 64
        auf der rechten Seite: 61 64
    FunctionName <Function> (98)
        auf der linken Seite: 65 66
        auf der rechten Seite: 62 63
    Call <Call> (99)
        auf der linken Seite: 67 68
        auf der rechten Seite: 34 136
    Callbegin <Call> (100)
        auf der linken Seite: 69 70
        auf der rechten Seite: 68 70
    If <If> (101)
        auf der linken Seite: 71 72
        auf der rechten Seite: 59 133 135
    Ifbegin <If> (102)
        auf der linken Seite: 73 74
        auf der rechten Seite: 71 72 74
    IfExpr <Expr> (103)
        auf der linken Seite: 75 76 77
        auf der rechten Seite: 72 73 74
    Op <Expr> (104)
        auf der linken Seite: 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114 115 116 117 118 119 120 121 122 123
        auf der rechten Seite: 134 140
    Print <Print> (105)
        auf der linken Seite: 124 125
        auf der rechten Seite: 3 54
    Printbegin <Print> (106)
        auf der linken Seite: 126 127 128 129
        auf der rechten Seite: 124 127 128 129
    TopExpr <Expr> (107)
        auf der linken Seite: 130 131 132 133
        auf der rechten Seite: 1 2 35 41 51 126
    Expr <Expr> (108)
        auf der linken Seite: 134 135 136 137 138 139 140 141 142 143 144
        auf der rechten Seite: 7 8 11 12 15 16 17 19 20 21 22 23 24 25 27 28 29 30 55 56 57 58 69 70 73 74 75 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 115 116 117 118 119 120 121 122 123 127 128 129 130


Zustand 0

    0 $accept: • Source $end

    GRAPH       schiebe und gehe zu Zustand 1 über
    SQRT        schiebe und gehe zu Zustand 2 über
    SGN         schiebe und gehe zu Zustand 3 über
    GCD         schiebe und gehe zu Zustand 4 über
    LCM         schiebe und gehe zu Zustand 5 über
    FIBO        schiebe und gehe zu Zustand 6 über
    PRIMORIAL   schiebe und gehe zu Zustand 7 über
    IF          schiebe und gehe zu Zustand 8 über
    SETPREC     schiebe und gehe zu Zustand 9 über
    GETPREC     schiebe und gehe zu Zustand 10 über
    SETPRECD    schiebe und gehe zu Zustand 11 über
    SETOUTPREC  schiebe und gehe zu Zustand 12 über
    SOPD        schiebe und gehe zu Zustand 13 über
    RATIONAL    schiebe und gehe zu Zustand 14 über
    NUM         schiebe und gehe zu Zustand 15 über
    DEN         schiebe und gehe zu Zustand 16 über
    INT_T       schiebe und gehe zu Zustand 17 über
    FLT_T       schiebe und gehe zu Zustand 18 über
    ISPRIME     schiebe und gehe zu Zustand 19 über
    NEXTPRIME   schiebe und gehe zu Zustand 20 über
    PRINT       schiebe und gehe zu Zustand 21 über
    REF_COUNT   schiebe und gehe zu Zustand 22 über
    ADDRESS_OF  schiebe und gehe zu Zustand 23 über
    IS_KEY      schiebe und gehe zu Zustand 24 über
    INT         schiebe und gehe zu Zustand 25 über
    FLT         schiebe und gehe zu Zustand 26 über
    VAR         schiebe und gehe zu Zustand 27 über
    FUN         schiebe und gehe zu Zustand 28 über
    STR         schiebe und gehe zu Zustand 29 über
    '|'         schiebe und gehe zu Zustand 30 über
    '-'         schiebe und gehe zu Zustand 31 über
    '~'         schiebe und gehe zu Zustand 32 über
    '('         schiebe und gehe zu Zustand 33 über
    '['         schiebe und gehe zu Zustand 34 über
    '{'         schiebe und gehe zu Zustand 35 über

    Source               gehe zu Zustand 36 über
    List                 gehe zu Zustand 37 über
    Listbegin            gehe zu Zustand 38 über
    Dict                 gehe zu Zustand 39 über
    Dictbegin            gehe zu Zustand 40 über
    Subscript            gehe zu Zustand 41 über
    Subscriptmiddle      gehe zu Zustand 42 über
    Subscriptbegin       gehe zu Zustand 43 über
    SubscriptExpr        gehe zu Zustand 44 über
    SubscriptAssignment  gehe zu Zustand 45 über
    Assignment           gehe zu Zustand 46 über
    Function             gehe zu Zustand 47 über
    Functionproto        gehe zu Zustand 48 über
    FunctionArgs         gehe zu Zustand 49 über
    FunctionName         gehe zu Zustand 50 über
    Call                 gehe zu Zustand 51 über
    Callbegin            gehe zu Zustand 52 über
    If                   gehe zu Zustand 53 über
    Ifbegin              gehe zu Zustand 54 über
    Op                   gehe zu Zustand 55 über
    Print                gehe zu Zustand 56 über
    Printbegin           gehe zu Zustand 57 über
    TopExpr              gehe zu Zustand 58 über
    Expr                 gehe zu Zustand 59 über


Zustand 1

    1 Source: GRAPH • '(' TopExpr ')' ';'

    '('  schiebe und gehe zu Zustand 60 über


Zustand 2

  102 Op: SQRT • Expr ')'

    SQRT        schiebe und gehe zu Zustand 2 über
    SGN         schiebe und gehe zu Zustand 3 über
    GCD         schiebe und gehe zu Zustand 4 über
    LCM         schiebe und gehe zu Zustand 5 über
    FIBO        schiebe und gehe zu Zustand 6 über
    PRIMORIAL   schiebe und gehe zu Zustand 7 über
    SETPREC     schiebe und gehe zu Zustand 9 über
    GETPREC     schiebe und gehe zu Zustand 10 über
    SETPRECD    schiebe und gehe zu Zustand 11 über
    SETOUTPREC  schiebe und gehe zu Zustand 12 über
    SOPD        schiebe und gehe zu Zustand 13 über
    RATIONAL    schiebe und gehe zu Zustand 14 über
    NUM         schiebe und gehe zu Zustand 15 über
    DEN         schiebe und gehe zu Zustand 16 über
    INT_T       schiebe und gehe zu Zustand 17 über
    FLT_T       schiebe und gehe zu Zustand 18 über
    ISPRIME     schiebe und gehe zu Zustand 19 über
    NEXTPRIME   schiebe und gehe zu Zustand 20 über
    REF_COUNT   schiebe und gehe zu Zustand 22 über
    ADDRESS_OF  schiebe und gehe zu Zustand 23 über
    IS_KEY      schiebe und gehe zu Zustand 24 über
    INT         schiebe und gehe zu Zustand 25 über
    FLT         schiebe und gehe zu Zustand 26 über
    VAR         schiebe und gehe zu Zustand 61 über
    FUN         schiebe und gehe zu Zustand 62 über
    STR         schiebe und gehe zu Zustand 29 über
    '|'         schiebe und gehe zu Zustand 30 über
    '-'         schiebe und gehe zu Zustand 31 über
    '~'         schiebe und gehe zu Zustand 32 über
    '('         schiebe und gehe zu Zustand 33 über
    '['         schiebe und gehe zu Zustand 34 über
    '{'         schiebe und gehe zu Zustand 35 über

    List             gehe zu Zustand 37 über
    Listbegin        gehe zu Zustand 38 über
    Dict             gehe zu Zustand 39 über
    Dictbegin        gehe zu Zustand 40 über
    Subscript        gehe zu Zustand 63 über
    Subscriptmiddle  gehe zu Zustand 42 über
    Subscriptbegin   gehe zu Zustand 43 über
    SubscriptExpr    gehe zu Zustand 44 über
    Call             gehe zu Zustand 51 über
    Callbegin        gehe zu Zustand 52 über
    Op               gehe zu Zustand 55 über
    Expr             gehe zu Zustand 64 über


Zustand 3

  103 Op: SGN • Expr ')'

    SQRT        schiebe und gehe zu Zustand 2 über
    SGN         schiebe und gehe zu Zustand 3 über
    GCD         schiebe und gehe zu Zustand 4 über
    LCM         schiebe und gehe zu Zustand 5 über
    FIBO        schiebe und gehe zu Zustand 6 über
    PRIMORIAL   schiebe und gehe zu Zustand 7 über
    SETPREC     schiebe und gehe zu Zustand 9 über
    GETPREC     schiebe und gehe zu Zustand 10 über
    SETPRECD    schiebe und gehe zu Zustand 11 über
    SETOUTPREC  schiebe und gehe zu Zustand 12 über
    SOPD        schiebe und gehe zu Zustand 13 über
    RATIONAL    schiebe und gehe zu Zustand 14 über
    NUM         schiebe und gehe zu Zustand 15 über
    DEN         schiebe und gehe zu Zustand 16 über
    INT_T       schiebe und gehe zu Zustand 17 über
    FLT_T       schiebe und gehe zu Zustand 18 über
    ISPRIME     schiebe und gehe zu Zustand 19 über
    NEXTPRIME   schiebe und gehe zu Zustand 20 über
    REF_COUNT   schiebe und gehe zu Zustand 22 über
    ADDRESS_OF  schiebe und gehe zu Zustand 23 über
    IS_KEY      schiebe und gehe zu Zustand 24 über
    INT         schiebe und gehe zu Zustand 25 über
    FLT         schiebe und gehe zu Zustand 26 über
    VAR         schiebe und gehe zu Zustand 61 über
    FUN         schiebe und gehe zu Zustand 62 über
    STR         schiebe und gehe zu Zustand 29 über
    '|'         schiebe und gehe zu Zustand 30 über
    '-'         schiebe und gehe zu Zustand 31 über
    '~'         schiebe und gehe zu Zustand 32 über
    '('         schiebe und gehe zu Zustand 33 über
    '['         schiebe und gehe zu Zustand 34 über
    '{'         schiebe und gehe zu Zustand 35 über

    List             gehe zu Zustand 37 über
    Listbegin        gehe zu Zustand 38 über
    Dict             gehe zu Zustand 39 über
    Dictbegin        gehe zu Zustand 40 über
    Subscript        gehe zu Zustand 63 über
    Subscriptmiddle  gehe zu Zustand 42 über
    Subscriptbegin   gehe zu Zustand 43 über
    SubscriptExpr    gehe zu Zustand 44 über
    Call             gehe zu Zustand 51 über
    Callbegin        gehe zu Zustand 52 über
    Op               gehe zu Zustand 55 über
    Expr             gehe zu Zustand 65 über


Zustand 4

   96 Op: GCD • Expr ',' Expr ')'

    SQRT        schiebe und gehe zu Zustand 2 über
    SGN         schiebe und gehe zu Zustand 3 über
    GCD         schiebe und gehe zu Zustand 4 über
    LCM         schiebe und gehe zu Zustand 5 über
    FIBO        schiebe und gehe zu Zustand 6 über
    PRIMORIAL   schiebe und gehe zu Zustand 7 über
    SETPREC     schiebe und gehe zu Zustand 9 über
    GETPREC     schiebe und gehe zu Zustand 10 über
    SETPRECD    schiebe und gehe zu Zustand 11 über
    SETOUTPREC  schiebe und gehe zu Zustand 12 über
    SOPD        schiebe und gehe zu Zustand 13 über
    RATIONAL    schiebe und gehe zu Zustand 14 über
    NUM         schiebe und gehe zu Zustand 15 über
    DEN         schiebe und gehe zu Zustand 16 über
    INT_T       schiebe und gehe zu Zustand 17 über
    FLT_T       schiebe und gehe zu Zustand 18 über
    ISPRIME     schiebe und gehe zu Zustand 19 über
    NEXTPRIME   schiebe und gehe zu Zustand 20 über
    REF_COUNT   schiebe und gehe zu Zustand 22 über
    ADDRESS_OF  schiebe und gehe zu Zustand 23 über
    IS_KEY      schiebe und gehe zu Zustand 24 über
    INT         schiebe und gehe zu Zustand 25 über
    FLT         schiebe und gehe zu Zustand 26 über
    VAR         schiebe und gehe zu Zustand 61 über
    FUN         schiebe und gehe zu Zustand 62 über
    STR         schiebe und gehe zu Zustand 29 über
    '|'         schiebe und gehe zu Zustand 30 über
    '-'         schiebe und gehe zu Zustand 31 über
    '~'         schiebe und gehe zu Zustand 32 über
    '('         schiebe und gehe zu Zustand 33 über
    '['         schiebe und gehe zu Zustand 34 über
    '{'         schiebe und gehe zu Zustand 35 über

    List             gehe zu Zustand 37 über
    Listbegin        gehe zu Zustand 38 über
    Dict             gehe zu Zustand 39 über
    Dictbegin        gehe zu Zustand 40 über
    Subscript        gehe zu Zustand 63 über
    Subscriptmiddle  gehe zu Zustand 42 über
    Subscriptbegin   gehe zu Zustand 43 über
    SubscriptExpr    gehe zu Zustand 44 über
    Call             gehe zu Zustand 51 über
    Callbegin        gehe zu Zustand 52 über
    Op               gehe zu Zustand 55 über
    Expr             gehe zu Zustand 66 über


Zustand 5

   97 Op: LCM • Expr ',' Expr ')'

    SQRT        schiebe und gehe zu Zustand 2 über
    SGN         schiebe und gehe zu Zustand 3 über
    GCD         schiebe und gehe zu Zustand 4 über
    LCM         schiebe und gehe zu Zustand 5 über
    FIBO        schiebe und gehe zu Zustand 6 über
    PRIMORIAL   schiebe und gehe zu Zustand 7 über
    SETPREC     schiebe und gehe zu Zustand 9 über
    GETPREC     schiebe und gehe zu Zustand 10 über
    SETPRECD    schiebe und gehe zu Zustand 11 über
    SETOUTPREC  schiebe und gehe zu Zustand 12 über
    SOPD        schiebe und gehe zu Zustand 13 über
    RATIONAL    schiebe und gehe zu Zustand 14 über
    NUM         schiebe und gehe zu Zustand 15 über
    DEN         schiebe und gehe zu Zustand 16 über
    INT_T       schiebe und gehe zu Zustand 17 über
    FLT_T       schiebe und gehe zu Zustand 18 über
    ISPRIME     schiebe und gehe zu Zustand 19 über
    NEXTPRIME   schiebe und gehe zu Zustand 20 über
    REF_COUNT   schiebe und gehe zu Zustand 22 über
    ADDRESS_OF  schiebe und gehe zu Zustand 23 über
    IS_KEY      schiebe und gehe zu Zustand 24 über
    INT         schiebe und gehe zu Zustand 25 über
    FLT         schiebe und gehe zu Zustand 26 über
    VAR         schiebe und gehe zu Zustand 61 über
    FUN         schiebe und gehe zu Zustand 62 über
    STR         schiebe und gehe zu Zustand 29 über
    '|'         schiebe und gehe zu Zustand 30 über
    '-'         schiebe und gehe zu Zustand 31 über
    '~'         schiebe und gehe zu Zustand 32 über
    '('         schiebe und gehe zu Zustand 33 über
    '['         schiebe und gehe zu Zustand 34 über
    '{'         schiebe und gehe zu Zustand 35 über

    List             gehe zu Zustand 37 über
    Listbegin        gehe zu Zustand 38 über
    Dict             gehe zu Zustand 39 über
    Dictbegin        gehe zu Zustand 40 über
    Subscript        gehe zu Zustand 63 über
    Subscriptmiddle  gehe zu Zustand 42 über
    Subscriptbegin   gehe zu Zustand 43 über
    SubscriptExpr    gehe zu Zustand 44 über
    Call             gehe zu Zustand 51 über
    Callbegin        gehe zu Zustand 52 über
    Op               gehe zu Zustand 55 über
    Expr             gehe zu Zustand 67 über


Zustand 6

  104 Op: FIBO • Expr ')'

    SQRT        schiebe und gehe zu Zustand 2 über
    SGN         schiebe und gehe zu Zustand 3 über
    GCD         schiebe und gehe zu Zustand 4 über
    LCM         schiebe und gehe zu Zustand 5 über
    FIBO        schiebe und gehe zu Zustand 6 über
    PRIMORIAL   schiebe und gehe zu Zustand 7 über
    SETPREC     schiebe und gehe zu Zustand 9 über
    GETPREC     schiebe und gehe zu Zustand 10 über
    SETPRECD    schiebe und gehe zu Zustand 11 über
    SETOUTPREC  schiebe und gehe zu Zustand 12 über
    SOPD        schiebe und gehe zu Zustand 13 über
    RATIONAL    schiebe und gehe zu Zustand 14 über
    NUM         schiebe und gehe zu Zustand 15 über
    DEN         schiebe und gehe zu Zustand 16 über
    INT_T       schiebe und gehe zu Zustand 17 über
    FLT_T       schiebe und gehe zu Zustand 18 über
    ISPRIME     schiebe und gehe zu Zustand 19 über
    NEXTPRIME   schiebe und gehe zu Zustand 20 über
    REF_COUNT   schiebe und gehe zu Zustand 22 über
    ADDRESS_OF  schiebe und gehe zu Zustand 23 über
    IS_KEY      schiebe und gehe zu Zustand 24 über
    INT         schiebe und gehe zu Zustand 25 über
    FLT         schiebe und gehe zu Zustand 26 über
    VAR         schiebe und gehe zu Zustand 61 über
    FUN         schiebe und gehe zu Zustand 62 über
    STR         schiebe und gehe zu Zustand 29 über
    '|'         schiebe und gehe zu Zustand 30 über
    '-'         schiebe und gehe zu Zustand 31 über
    '~'         schiebe und gehe zu Zustand 32 über
    '('         schiebe und gehe zu Zustand 33 über
    '['         schiebe und gehe zu Zustand 34 über
    '{'         schiebe und gehe zu Zustand 35 über

    List             gehe zu Zustand 37 über
    Listbegin        gehe zu Zustand 38 über
    Dict             gehe zu Zustand 39 über
    Dictbegin        gehe zu Zustand 40 über
    Subscript        gehe zu Zustand 63 über
    Subscriptmiddle  gehe zu Zustand 42 über
    Subscriptbegin   gehe zu Zustand 43 über
    SubscriptExpr    gehe zu Zustand 44 über
    Call             gehe zu Zustand 51 über
    Callbegin        gehe zu Zustand 52 über
    Op               gehe zu Zustand 55 über
    Expr             gehe zu Zustand 68 über


Zustand 7

  105 Op: PRIMORIAL • Expr ')'

    SQRT        schiebe und gehe zu Zustand 2 über
    SGN         schiebe und gehe zu Zustand 3 über
    GCD         schiebe und gehe zu Zustand 4 über
    LCM         schiebe und gehe zu Zustand 5 über
    FIBO        schiebe und gehe zu Zustand 6 über
    PRIMORIAL   schiebe und gehe zu Zustand 7 über
    SETPREC     schiebe und gehe zu Zustand 9 über
    GETPREC     schiebe und gehe zu Zustand 10 über
    SETPRECD    schiebe und gehe zu Zustand 11 über
    SETOUTPREC  schiebe und gehe zu Zustand 12 über
    SOPD        schiebe und gehe zu Zustand 13 über
    RATIONAL    schiebe und gehe zu Zustand 14 über
    NUM         schiebe und gehe zu Zustand 15 über
    DEN         schiebe und gehe zu Zustand 16 über
    INT_T       schiebe und gehe zu Zustand 17 über
    FLT_T       schiebe und gehe zu Zustand 18 über
    ISPRIME     schiebe und gehe zu Zustand 19 über
    NEXTPRIME   schiebe und gehe zu Zustand 20 über
    REF_COUNT   schiebe und gehe zu Zustand 22 über
    ADDRESS_OF  schiebe und gehe zu Zustand 23 über
    IS_KEY      schiebe und gehe zu Zustand 24 über
    INT         schiebe und gehe zu Zustand 25 über
    FLT         schiebe und gehe zu Zustand 26 über
    VAR         schiebe und gehe zu Zustand 61 über
    FUN         schiebe und gehe zu Zustand 62 über
    STR         schiebe und gehe zu Zustand 29 über
    '|'         schiebe und gehe zu Zustand 30 über
    '-'         schiebe und gehe zu Zustand 31 über
    '~'         schiebe und gehe zu Zustand 32 über
    '('         schiebe und gehe zu Zustand 33 über
    '['         schiebe und gehe zu Zustand 34 über
    '{'         schiebe und gehe zu Zustand 35 über

    List             gehe zu Zustand 37 über
    Listbegin        gehe zu Zustand 38 über
    Dict             gehe zu Zustand 39 über
    Dictbegin        gehe zu Zustand 40 über
    Subscript        gehe zu Zustand 63 über
    Subscriptmiddle  gehe zu Zustand 42 über
    Subscriptbegin   gehe zu Zustand 43 über
    SubscriptExpr    gehe zu Zustand 44 über
    Call             gehe zu Zustand 51 über
    Callbegin        gehe zu Zustand 52 über
    Op               gehe zu Zustand 55 über
    Expr             gehe zu Zustand 69 über


Zustand 8

   73 Ifbegin: IF • Expr ':' IfExpr
